--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
-    "@heroicons/react": "^2.2.0",
+    
     "@hookform/resolvers": "^5.2.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.80.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.553.0",
+    
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -35,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19",
+    "baseline-browser-mapping": "^2.9.9",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
     "tailwindcss": "^4",
